[package]
name = "gc9a01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface = "0.4.1"
embedded-hal = "1.0.0-alpha.8"

[dependencies.embedded-graphics-core]
optional = true
version = "0.3"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

